# la-beuverie

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  bun.lockb  docker-compose.yml  mongo-init.js  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
.github/: dependabot.yml
api/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  example.env
api/.devcontainer/: devcontainer.json
api/collection/: bruno.json
api/collection/auth/: Login user.bru  Logout user.bru  Register user.bru
api/collection/drinks/: Create drink.bru  Get all drinks.bru
api/collection/tags/: Get all tags.bru
api/src/: main.rs  types.rs
api/src/controllers/: auth.rs  drink.rs  drink_controller.rs  mod.rs  tag.rs  test.rs
api/src/database/: database_client.rs  mod.rs
api/src/extractors/: auth.rs  claims.rs
api/src/handlers/: auth.rs  drink.rs  mod.rs  response.rs  routes.rs  types.rs  user.rs
api/src/handlers/auth/: handler.rs  mod.rs  routes.rs  service.rs  types.rs
api/src/handlers/drinks/: handler.rs  mod.rs  routes.rs  service.rs  types.rs
api/src/handlers/messages/: handler.rs  mod.rs  routes.rs  types.rs
api/src/handlers/tags/: handler.rs  mod.rs  routes.rs  service.rs
api/src/handlers/users/: handler.rs  mod.rs  routes.rs  service.rs  types.rs
api/src/middlewares/: cors.rs  logger.rs  mod.rs  security_headers.rs
api/src/models/: drink.rs  mod.rs  model.rs  tag.rs  user.rs
api/src/mongo_client/: mongo_client.rs
api/src/repository/: db_client.rs  drink.rs  mod.rs  repo.rs  tag.rs  user.rs
api/src/requests/: create_drink_request.rs  create_user_request.rs  login_user_request.rs  mod.rs  update_user_request.rs  validate_user_request.rs
api/src/services/: auth.rs  drink.rs  drink_service.rs  mod.rs  tag.rs  test.rs  user.rs
api/src/utils/: config.rs  error.rs  jwt_auth.rs  mod.rs  password.rs  token.rs
client/: .eslintrc.js  Dockerfile  bun.lockb  (+7 more)
(+190 files in other folders)
