[package]
name = "la-beuverie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

actix-cors = "0.6.4"
actix-web-httpauth = "0.8.1"
derive_more = "0.99.17"
env_logger = "0.10.1"
envy = "0.4.2"
jsonwebtoken = "9.1.0"
serde = "1.0.193"
awc = { version = "3.2.0", features = [ "openssl" ] }

mongodb = "2.7.0"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4.31"
futures = { version = "0.3.29", features = [] }
uuid = "1.6.1"
serde_json = "1.0.108"
argon2 = "0.5.2"
dotenv = "0.15.0"
reqwest = "0.11.22"
